<resources>
    <string name="app_name">Smart Notes</string>
    <string name="simple_note">Simple Note</string>
    <string name="checklist">Checklist</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="empty_view_description">No notes to show, click on add button to add a new note</string>
    <string name="image_note">Image Note</string>
    <string name="note_title">Note Title</string>
    <string name="description_hint">Description of note</string>
    <string name="save">Save</string>
    <string name="sort">Sort</string>
    <string name="date_created_ascending">Date Created (Old first)</string>
    <string name="date_created_descending">Date Created (New First)</string>
    <string name="title_ascending">Title (Ascending)</string>
    <string name="checklist_item">Checklist Item</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="share_note">Share Note</string>
    <string name="date_created">Created On</string>
    <string name="date_modified">Modified On</string>
    <string name="checklist_title">Checklist Title</string>
    <string name="checkmark_unicode">\u2714</string>
    <string name="image">Image</string>
    <string name="error">Error deleting Temp Image</string>
    <string name="change">Change</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="trash_empty_view_description">No Item in trash....</string>
    <string name="delete_forever">Delete Forever</string>
    <string name="restore">Restore Note</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_key">dark_theme_key</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="title_descending">Title (Descending)</string>
    <string name="search_hint">Search here</string>
    <string name="search_error_view_description">No result found for the given query</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="unsaved_changes_dialog_message">Discard your changes and quit editing?</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="add_checklist_button">Add Checklist Button</string>
    <string name="chooser_title">Share Note with</string>
    <string name="share_type_text">text/plain</string>
    <string name="delete_dialog_message">Item will be moved to trash, do you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="menu_button">Menu button for extra options</string>
    <string name="image_capture_button">Button to start image capture</string>
    <string name="moved_to_trash">Moved to trash</string>
    <string name="undo">Undo</string>
    <string name="restored">Restored from trash</string>
    <string name="deleted_permanently">Deleted Permanently</string>
    <string name="items">Items:</string>
    <string name="duplicate_entry_error">Duplicate Entry is not allowed</string>
    <string name="empty_item_error">Item cannot be empty</string>
    <string name="empty_task_error">Task cannot be empty</string>
    <string name="empty_task_list_error">You need to add at least one task</string>
    <string name="list_title_error">You should give a title to your list</string>
    <string name="note_created_msg">Note created successfully!</string>
    <string name="note_updated_msg">Note updated successfully!</string>
    <string name="mandatory_fields_error">All fields are mandatory</string>
    <string name="storage_permission_error">Storage Permission Denied</string>
    <string name="title_regex_error">Title can only contain characters or characters and numbers</string>
    <string name="empty_title_error">Please enter a title of your note</string>
    <string name="empty_image_error">Please select an image for your note</string>
    <string name="notification_desc">Click bell to set notification</string>
    <string name="notification_time_error">Date and Time cannot be in past</string>
    <string name="image_note_notification_message">You have some work pending, see your image note.</string>
    <string name="enable_notification_message">Want to set reminder notification?</string>
    <string name="notification_error">Select a date and time for notification</string>
    <string name="select_note_btn">Select a note to display</string>
    <string name="app_desc">\"Smart Notes is a simple and awesome notepad app. It gives you a quick and simple notepad
    editing experience when you write notes, shopping lists, to-do lists and image notes. Making
        notes in this app is very easy.\"</string>
    <string name="app_features"><b><big><u>Features:</u></big></b> \n\n The main features of this app are: \n
        <big>&#8226;</big> Makes simple text note in just two clicks \n
        <big>&#8226;</big> Take Pictures and save as a note \n
        <big>&#8226;</big> Makes checklist notes for To-do list &amp; Shopping list. \n
        <big>&#8226;</big> Notification reminder for the notes \n
        <big>&#8226;</big> Search notes by Title \n
        <big>&#8226;</big> Easy share notes via SMS, E-mail, Twitter or any other platform \n
        <big>&#8226;</big> Sticky note memo widget (Put your notes on your home screen)</string>
    <string name="note_making_steps"><b><big><u>Taking a text note:</u></big></b> \n\n
    Just click on the ‘+’ button and select the text note option from the dialog box. Then just write
the title and the text and click on the save button. You can write as many words as you want, there is no limit to that. Once saved, you can edit , share, set a reminder or delete using the
item menu by clicking on the three vertical dots on the list item. Once deleted, it will be moved to
trash and from there you can either restore it or delete it permanently. \n\n
        <b><big><u>Making To-do List or Shopping List:</u></big></b> \n\n
    Just click on the ‘+’ button and select the checklist note option from the dialog box. In Checklist
mode, you can add the title and add as many items as you want for your list. After the list is
finished, click on save button to save it. You can toggle the checkbox of each item in this mode
and after finishing, just save it. On checking the list item, the item will be line slashed indicating
it is finished. Once all items are checked, the list’s title will be slashed as well. Rest features
like sharing, deleting, setting reminder are same as text note. \n\n
        <b><big><u>Taking a image note:</u></big></b> \n\n
        Just click on the ‘+’ button and select the image note option from the dialog box. Enter the title
and click on camera icon. Then take image from your camera and click on save button to save
it. You can also click on change button to change the image before saving or while editing. Rest
features like sharing, deleting, setting reminder are same as text note.
    </string>
    <string name="notification">Notification:</string>
    <string name="notification_not_set">Not set</string>
    <string name="add_note_button">Add note button</string>
    <string name="note_edit_button">Note editing button</string>
    <string name="permanently_delete_dialog_message">Item will be deleted permanently, do you want to continue?</string>
    <string name="delete_note">Delete Note</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="empty_trash_dialog_message">All items will be permanently deleted, continue?</string>
    <string name="all_items_deleted">Deleted all items</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_link">https://intkhabahmed.github.io/privacy-policy/</string>
</resources>
