<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff59d"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/primary_container_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_note_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            tools:text="@string/note_title" />

        <ImageButton
            android:id="@+id/note_pickup_btn"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/select_note_btn"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_settings_24dp"
            tools:ignore="VectorDrawableCompat" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/primary_container_ll"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_note_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/primary_container_ll"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="7"
        android:padding="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        tools:text="@tools:sample/lorem/random" />

    <ImageView
        android:id="@+id/note_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/primary_container_ll"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_note"
        android:padding="8dp"
        android:visibility="invisible" />

</RelativeLayout>