<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.intkhabahmed.smartnotes.ui.AddSimpleNote">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetStart="72dp"
        app:titleTextColor="@android:color/white" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:actionBarSize">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/note_title"
                android:textColorHint="?attr/secondaryTextColor"
                app:hintTextAppearance="?attr/hintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/note_title_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:inputType="text|textPersonName"
                    android:padding="16dp"
                    android:textColor="?attr/primaryTextColor" />
            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/change_image_button">

                <ImageView
                    android:id="@+id/iv_image_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image_note"
                    android:scaleType="fitStart"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_insert_photo_black_24dp" />

                <ImageButton
                    android:id="@+id/capture_image_button"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/image_capture_button"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_add_a_photo_24dp"
                    tools:layout_editor_absoluteX="24dp"
                    tools:layout_editor_absoluteY="112dp" />
            </FrameLayout>

            <Button
                android:id="@+id/change_image_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/change"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_time_picker_btn" />

            <CheckBox
                android:id="@+id/enable_notification_cb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/enable_notification_message"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="?attr/primaryTextColor"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <ImageButton
                android:id="@+id/date_time_picker_btn"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/notification_desc"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="@+id/enable_notification_cb"
                app:layout_constraintTop_toBottomOf="@+id/enable_notification_cb"
                app:srcCompat="@drawable/ic_notifications_active_24dp" />

            <TextView
                android:id="@+id/date_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/notification_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="?attr/primaryTextColor"
                app:layout_constraintBottom_toTopOf="@+id/date_time_picker_btn"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                app:layout_constraintStart_toEndOf="@+id/date_time_picker_btn"
                app:layout_constraintTop_toBottomOf="@+id/date_time_picker_btn" />

            <android.support.constraint.Group
                android:id="@+id/notification_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="date_time_tv, date_time_picker_btn" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
