<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAndEditChecklist">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetStart="72dp"
        app:titleTextColor="@android:color/white" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/add_checklist_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:actionBarSize"
        android:focusableInTouchMode="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/noteItemInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="?attr/hintColor"
            android:textColorHint="?attr/secondaryTextColor"
            app:layout_constraintEnd_toStartOf="@+id/add_checklist_button"
            app:layout_constraintStart_toStartOf="@+id/titleInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/titleInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/checklist_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="0dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/checklist_item"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="?attr/primaryTextColor"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_checklist_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/add_checklist_button"
            app:layout_constraintBottom_toTopOf="@+id/noteItemInputLayout"
            app:layout_constraintEnd_toEndOf="@+id/titleInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/noteItemInputLayout"
            app:layout_constraintVertical_bias="0.42000002"
            app:srcCompat="@drawable/ic_add_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/titleInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="?attr/hintColor"
            android:textColorHint="?attr/secondaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/checklist_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/checklist_title"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="?attr/primaryTextColor"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteItemInputLayout">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="?attr/cardViewBackground">

                <LinearLayout
                    android:id="@+id/checklist_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp" />
            </android.support.v7.widget.CardView>
        </android.support.v4.widget.NestedScrollView>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>